--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     emailjs.init('n2swRUZesgI5NGmGP')
   </script>
 
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H7N35Y1KS3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-H7N35Y1KS3');
+    </script>
+
+
     <title>Oliver M Artista</title>
 </head>
 
